--- a/app/src/main/res/layout/activity_accueil.xml
+++ b/app/src/main/res/layout/activity_accueil.xml
@@ -4,40 +4,61 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="#ACB6A7"
     tools:layout_editor_absoluteX="0dp"
     tools:layout_editor_absoluteY="105dp">
 
     <TextView
         android:id="@+id/textViewBienvenu"
-        android:layout_width="176dp"
-        android:layout_height="70dp"
-        android:layout_marginStart="117dp"
-        android:layout_marginTop="138dp"
+        android:layout_width="191dp"
+        android:layout_height="71dp"
+        android:layout_marginStart="116dp"
+        android:layout_marginTop="200dp"
+        android:background="#818D7E"
+        android:fontFamily="sans-serif-black"
         android:text="@string/TextViewMessageBienvenu"
+        android:textColor="@color/text"
+        android:gravity="center"
+        android:textSize="20sp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
     <Button
+        android:id="@+id/buttonNotes"
+        android:layout_width="213dp"
+        android:layout_height="94dp"
+        android:layout_marginStart="108dp"
+        android:layout_marginTop="48dp"
+        android:backgroundTint="#818D7E"
+        android:fontFamily="sans-serif-black"
+        android:text="@string/buttonMesNotes"
+        android:textSize="20sp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/buttonInfos" />
+
+    <Button
         android:id="@+id/buttonInfos"
-        android:layout_width="135dp"
-        android:layout_height="73dp"
-        android:layout_marginStart="138dp"
-        android:layout_marginTop="28dp"
-        android:backgroundTint="#D61C1C"
+        android:layout_width="213dp"
+        android:layout_height="94dp"
+        android:layout_marginStart="108dp"
+        android:layout_marginTop="84dp"
+        android:backgroundTint="#818D7E"
+        android:fontFamily="sans-serif-black"
         android:text="@string/buttonMesInfos"
         android:textColorHighlight="#D51212"
         android:textColorLink="#FF0000"
+        android:textSize="20sp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textViewBienvenu" />
 
-    <Button
-        android:id="@+id/buttonNotes"
-        android:layout_width="135dp"
-        android:layout_height="73dp"
-        android:layout_marginStart="138dp"
-        android:layout_marginTop="32dp"
-        android:text="@string/buttonMesNotes"
+    <ImageView
+        android:id="@+id/imageView2"
+        android:layout_width="150dp"
+        android:layout_height="145dp"
+        android:layout_marginStart="4dp"
+        android:layout_marginTop="6dp"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/buttonInfos" />
+        app:layout_constraintTop_toTopOf="parent"
+        app:srcCompat="@drawable/fsi_logo" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
