--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,42 +4,63 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:backgroundTint="#953E3E"
-    tools:context=".MainActivity" >
+    android:background="#ACB6A7"
+    tools:context=".MainActivity">
+
+    <Button
+        android:id="@+id/Connexion"
+        android:layout_width="235dp"
+        android:layout_height="76dp"
+        android:layout_marginStart="96dp"
+        android:layout_marginTop="60dp"
+        android:backgroundTint="#818D7E"
+        android:fontFamily="sans-serif-black"
+        android:onClick="ClickMe"
+        android:text="@string/buttonConnexion"
+        android:textColor="@color/text"
+        android:textSize="25sp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/editTextMdp" />
 
     <EditText
         android:id="@+id/editTextLogin"
         android:layout_width="195dp"
         android:layout_height="61dp"
         android:layout_marginStart="112dp"
-        android:layout_marginTop="172dp"
+        android:layout_marginTop="220dp"
+        android:background="#818D7E"
         android:ems="10"
+        android:fontFamily="sans-serif-black"
         android:hint="Login"
         android:inputType="text"
+        android:singleLine="true"
+        android:textColor="@color/text"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
+
+    <ImageView
+        android:id="@+id/imageView"
+        android:layout_width="150dp"
+        android:layout_height="145dp"
+        android:layout_marginStart="5dp"
+        android:layout_marginTop="3dp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:srcCompat="@drawable/fsi_logo" />
 
     <EditText
         android:id="@+id/editTextMdp"
         android:layout_width="195dp"
-        android:layout_height="63dp"
+        android:layout_height="61dp"
         android:layout_marginStart="112dp"
-        android:layout_marginTop="40dp"
+        android:layout_marginTop="35dp"
+        android:background="#818D7E"
         android:ems="10"
         android:hint="Mot de passe"
-        android:inputType="text"
+        android:fontFamily="sans-serif-black"
+        android:inputType="textPassword"
+        android:textColor="@color/text"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/editTextLogin" />
 
-    <Button
-        android:id="@+id/Connexion"
-        android:layout_width="213dp"
-        android:layout_height="71dp"
-        android:layout_marginStart="99dp"
-        android:layout_marginTop="42dp"
-        android:onClick="ClickMe"
-        android:textColor="@color/text"
-        android:text="@string/buttonConnexion"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/editTextMdp" />
 </androidx.constraintlayout.widget.ConstraintLayout>
